<resources>
    <string name="app_name">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="app_logo_description">App logo</string>
    <string name="confirm_password">Confirm Password </string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="splash">logo</string>
    <string name="bg">bg</string>
    <string name="the_caption_title">caption_title</string>
    <string name="farm_name">Farm name</string>
    <string name="add_farm">Add Farm</string>
    <string name="search_farm">Search Farm</string>
    <string name="farm_logo">farm_logo</string>
    <string name="farm_name2">Farm Name</string>
    <string name="farm_location">Farm Location</string>
    <string name="farm_location2">Farm Location</string>
    <string name="search_location">Search Location</string>
    <string name="_25">25</string>
    <string name="condition">Condition</string>
    <string name="humidity">Humidity</string>
    <string name="pretoria">Pretoria</string>
    <string name="humidity2">humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="icon2">icon2</string>
    <string name="wind">wind</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaW5kaXBoaWxlIiwiYSI6ImNsZjFndmh1MjA4YjQzcW55Zmh0NWM3YTEifQ.DUUc7ZAEMugLng_3E538QQ</string>

</resources>