<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b33"
    tools:context=".activities.AddFarmActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonew22" />


    <EditText
        android:id="@+id/farmNameSearch_txt"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:autofillHints="none"
        android:background="@drawable/input_bg"
        android:drawableStart="@android:drawable/ic_menu_mylocation"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/farm_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/searchFarm_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_bg"
        android:text="@string/search_farm"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/farmNameSearch_txt"
        app:layout_constraintTop_toBottomOf="@+id/farmNameSearch_txt"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/addFarm_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_bg"
        android:text="@string/add_farm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listFarms_recyclerView"
        app:layout_constraintVertical_bias="0.188" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listFarms_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farm_output_tv" />

    <TextView
        android:id="@+id/farm_output_tv"
        android:layout_width="355dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:ems="10"
        android:hint="Farm list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFarm_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>