<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b33"
    tools:context=".activities.WeatherServiceActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonew22" />


    <EditText
        android:id="@+id/search_location_editxt"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@android:drawable/ic_menu_mylocation"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/search_location"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/search_imgv_btn"
        android:layout_width="86dp"
        android:layout_height="58dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/search_location_editxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/search_location_editxt"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/average_temp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25°C"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_imgV1" />

    <ImageView
        android:id="@+id/condition_imgV1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location_editxt"
        app:srcCompat="@drawable/w2" />

    <TextView
        android:id="@+id/condition_tv"
        android:layout_width="63dp"
        android:layout_height="21dp"
        android:text="@string/condition"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_temp_tv"
        tools:ignore="condition_tv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bottomlayout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Humidity"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:src="@drawable/moisture" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="12 %"
                android:textColor="@color/colorWhite"
                android:textSize="28sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Wind Speed"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/wind_speed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="12 km/h"
                android:textColor="@color/colorWhite"
                android:textSize="28sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>